Alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ p {
     gap: 20px;
     width: 100%;
     max-width: 1140px;
-    padding: 20px 20px 0px 20px;
+    padding: 20px 0 0;
 }
 
 .card-top {
@@ -176,7 +176,7 @@ p {
 }
 
 .img-sec {
-    padding: 10px;
+    padding: 10px 0 10px 10px;
     width: 50%;
     text-align: center;
 }
@@ -195,7 +195,7 @@ p {
 }
 
 .page-sec {
-    padding: 60px 20px;
+    padding: 60px 30px;
     background-color: #FEFBEA;
 }
 
@@ -208,7 +208,7 @@ p {
 }
 
 .text-sec {
-    padding: 10px;
+    padding: 10px 10px 10px 0;
     width: 50%;
 	flex-direction: column;
 }
